# wasi-nn-python-bindings

./: Dockerfile  README.md
examples/: pytorch-mobilenet-image.sh
wasi-nn-load/: Cargo.toml  image_graph_script.py
wasi-nn-load/src/: lib.rs  load.rs  py_module.rs
